src/objects/Meeting_Venue_MERC__c.object
<CustomObject>
    <description>Object to track Venues that may be associated with a Meeting. Created on 9/27/2013 by KLorenti</description>
    <fields>
        <fullName>Account_MERC__c</fullName>
        <description>Links to Account. Created 9/28/2013 by KLorenti.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Meeting Venues</relationshipLabel>
        <relationshipName>Meeting_Venues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Meeting_MERC__c</fullName>
        <description>Meeting name information 
Created 9/28/2013 by KLorenti.</description>
        <label>Meeting</label>
        <referenceTo>Meeting_MERC__c</referenceTo>
        <relationshipLabel>Venues</relationshipLabel>
        <relationshipName>Meeting_Venues1</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type_MERC__c</fullName>
        <description>Tracks type of Venue. Created 9/28/2013 by KLorenti.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Meeting Venue</label>
    <nameField>
        <displayFormat>V-{00000}</displayFormat>
        <label>Venue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Venues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>